Facade for ServletRequest which may not be on the classpath and related cleanups
- previous impl used reflection and java.lang.Object, but in all javadocs
  mentioned that the Object must be ServletContext
- this is more strict, uses ServletContext directly, but as it still may
  not be available, it is represented by the facade, or null is provided,
  which is same as before.
- removed reflection including related error messages
- impl moved out of SecurityUtil where it doesn't belong